# 12-filters-by-code

./: README.md
GUI/: README.md
GUI/QT/: bmplib.cpp  imageFilters.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  sources.qrc
Program/: CMakeLists.txt  filter(a).cpp  filter(b).cpp  filter4.cpp  filter7.cpp
RGB photos/: README.md  filter(a).cpp  filter(b).cpp  filter(c).cpp  filter1.cpp  filter2.cpp  filter3.cpp  filter4.cpp  filter5.cpp  filter6.cpp  filter7.cpp  filter8.cpp  filter9.cpp
RGB photos/full_project/: README.md  all_filters.cpp
grey photos/: filter(a).cpp  filter(b).cpp  filter(c).cpp  filter1.cpp  filter1.h  filter2.cpp  filter3.cpp  filter4.cpp  filter5.cpp  filter6.cpp  filter7.cpp  filter8.cpp  filter9.cpp
grey photos/full_project/: README.md  all_filters.cpp  main.cpp
