cmake_minimum_required(VERSION 3.20)
project(Project)

set(CMAKE_CXX_STANDARD 17)
add_executable(filter1 filter1.cpp)
add_executable(filter4 filter4.cpp)
add_executable(filter7 filter7.cpp)
add_executable(filtera "filter(a).cpp")
add_executable(filterb "filter(b).cpp")
add_executable(Project5 bmplib.cpp)
